# polymarket-trading-engine

./: .env.example  Makefile  PLAN.md  README.md  pyproject.toml
.claude/skills/strategies/: SKILL.md
docs/: DEPLOYMENT.md  ROADMAP.md
scripts/: analyze_regime_fills.py  analyze_soak.py  apply_exit_tuning.py  backtest_penny.py  btc_polymarket_lag.py  copy_mirror_sim.py  copy_wallet_discovery.py  copy_wallet_discovery_verdict.md  entry_quality_analysis.py  exit_policy_search.py  hedged_pair_backtest.py  hedged_pair_verdict.md  show_strategies.py  strategy_simulation_report.md
src/polymarket_ai_agent/: __init__.py  config.py  initial_settings.py  service.py  types.py
src/polymarket_ai_agent/apps/api/: main.py
src/polymarket_ai_agent/apps/daemon/: __init__.py  heartbeat.py  run.py
src/polymarket_ai_agent/apps/operator/: cli.py
src/polymarket_ai_agent/connectors/: __init__.py  binance_ws.py  polymarket.py  polymarket_ws.py
src/polymarket_ai_agent/engine/: __init__.py  adaptive_scoring.py  btc_state.py  db.py  execution.py  journal.py  maker_rewards.py  market_state.py  migrations.py  overreaction_scoring.py  penny_scoring.py  portfolio.py  quant_scoring.py  regime.py  research.py  risk.py  scoring.py  settings_store.py
src/polymarket_ai_agent/engine/execution/: engine.py  router.py
src/polymarket_ai_agent/engine/market_maker/: __init__.py  inventory.py  quoter.py  scanner.py  scorer.py
src/polymarket_ai_agent/migrations/: 20260421T140000-seed-initial-settings-baseline.py  20260501T120000-create-reward-accruals-table.py  __init__.py
src/polymarket_trading_engine/: __init__.py  config.py  initial_settings.py  service.py
src/polymarket_trading_engine/apps/api/: main.py
src/polymarket_trading_engine/apps/daemon/: __init__.py  run.py
src/polymarket_trading_engine/apps/operator/: cli.py
src/polymarket_trading_engine/connectors/: binance_ws.py  external_feeds.py  polymarket.py  polymarket_ws.py
src/polymarket_trading_engine/engine/: adaptive_scoring.py  btc_state.py  journal.py  market_state.py  migrations.py  overreaction_scoring.py  penny_scoring.py  portfolio.py  quant_scoring.py  regime.py  research.py  risk.py  scoring.py  settings_store.py
src/polymarket_trading_engine/engine/execution/: __init__.py  book_utils.py  engine.py  paper_maker.py  router.py
src/polymarket_trading_engine/engine/market_maker/: __init__.py  inventory.py  reward_accrual.py  scanner.py  scorer.py
src/polymarket_trading_engine/migrations/: 20260421T130000-create-baseline-schema.py  20260421T130500-create-settings-changes-table.py  20260421T140000-seed-initial-settings-baseline.py  20260422T180000-add-strategy-id-to-positions.py  __init__.py
tests/: conftest.py  test_adaptive_scoring.py  test_analyze_soak.py  test_api.py  test_api_metrics.py  test_binance_ws.py  test_book_utils.py  test_btc_15m_family.py  test_btc_state.py  test_cli.py  test_close_flow.py  test_connectors.py  test_daemon.py  test_execution.py  test_execution_router.py  test_heartbeat.py  test_initial_settings.py  test_journal.py  test_journal_retention.py  test_live_fill_bridge.py  test_maintenance.py  test_maker_rewards.py  test_market_maker_handler.py  test_market_maker_inventory.py  test_market_maker_quoter.py  test_market_maker_reward_accrual.py  test_market_maker_scanner.py  test_market_maker_scoring.py  test_market_maker_universe.py  test_market_state.py  test_migrations.py  test_overreaction_scoring.py  test_paper_maker.py  test_penny_scoring.py  test_polymarket_ws.py  test_portfolio.py  test_portfolio_per_strategy_balance.py  test_quant_scoring.py  test_regime.py  test_research.py  (+5 more)
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
