[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-ai-agent"
version = "0.1.0"
description = "Paper-first Polymarket trading agent scaffold with research, scoring, risk, and execution layers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "py-clob-client>=0.25.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
polymarket-ai-agent = "polymarket_ai_agent.apps.operator.cli:app"
polymarket-ai-agent-api = "polymarket_ai_agent.apps.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_ai_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
