[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-trading-engine"
version = "0.1.0"
description = "Event-driven Polymarket trading system. Deterministic multi-strategy scoring (quant / adaptive / overreaction / penny / maker-rewards) over Polymarket CLOB + Binance websockets, paper-first execution with a maker-first router, hard-gated live trading, runtime-tunable settings, and an operator CLI + FastAPI + React dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "py-clob-client>=0.25.0",
  "rich>=13.7.1",
  "sortedcontainers>=2.4.0",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
  "websockets>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  # Used by uvicorn --reload for fsevents-based file watching. Without
  # it uvicorn silently falls back to StatReload polling which misses
  # edits to modules that weren't imported at startup.
  "watchfiles>=0.24.0",
]

[project.scripts]
polymarket-trading-engine = "polymarket_trading_engine.apps.operator.cli:app"
polymarket-trading-engine-api = "polymarket_trading_engine.apps.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_trading_engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
